must-gather.local.5629786973073760676/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-b74b27084f7dce35282f849aca3b99d79a6cead0a3a4046bf66c4953c296daba/namespaces/openshift-ingress-canary/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/balance: roundrobin
    creationTimestamp: "2025-03-31T20:26:15Z"
    labels:
      ingress.openshift.io/canary: canary_controller
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/balance: {}
          f:labels:
            .: {}
            f:ingress.openshift.io/canary: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"8731f253-0b3b-42e0-b827-c37aa2e1000b"}: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:subdomain: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: ingress-operator
      operation: Update
      time: "2025-03-31T20:26:15Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:host: {}
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2025-03-31T20:26:36Z"
    name: canary
    namespace: openshift-ingress-canary
    ownerReferences:
    - apiVersion: apps/v1
      controller: true
      kind: daemonset
      name: ingress-canary
      uid: 8731f253-0b3b-42e0-b827-c37aa2e1000b
    resourceVersion: "57037"
    uid: f7f606a8-5fd8-49eb-a918-a8c83b686bcb
  spec:
    port:
      targetPort: 8080
    subdomain: canary-openshift-ingress-canary
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ingress-canary
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2025-03-31T20:26:36Z"
        status: "True"
        type: Admitted
      host: canary-openshift-ingress-canary.apps.ovhcpococp.trikorasolutions.net
      routerCanonicalHostname: router-default.apps.ovhcpococp.trikorasolutions.net
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "718151"
